[package]
name = "enveloperb"
version = "0.0.0"
edition = "2021"

[dependencies]
enveloper = { git = "ssh://git@github.com/cipherstash/enveloper", branch = "main" }
lazy_static = "^0.2.2"
rutie = "0.8.4"
tokio = { version = "^1.17.0", features = [ "rt-multi-thread" ] }
aws-config = "0.10.1"
aws-sdk-kms = "0.10.1"
aws-types = { version = "0.10.1", features = [ "hardcoded-credentials" ] }

[lib]
name = "enveloperb"
crate-type = ["cdylib"]
