[package]
name = "enveloperb"
version = "0.0.0"
edition = "2021"

[dependencies]
envelopers = "0.2"
lazy_static = "^0.2.2"
rb-sys = "0.8.0"
rutie = { git = "https://github.com/mpalmer/rutie", branch = "rb_sys" }
tokio = { version = "^1.17.0", features = [ "rt-multi-thread" ] }
aws-config = "0.10.1"
aws-sdk-kms = "0.10.1"
aws-types = { version = "0.10.1", features = [ "hardcoded-credentials" ] }

[lib]
crate-type = ["cdylib"]
