[package]
name = "enveloperb"
version = "0.0.0"
edition = "2021"

[dependencies]
envelopers = { version = "0.5.1", features = [ "tokio" ] }
lazy_static = "^0.2.2"
rb-sys = "0.8.0"
rutie = { git = "https://github.com/mpalmer/rutie", branch = "rb_sys" }
tokio = { version = "^1.18.4", features = [ "rt-multi-thread" ] }
aws-config = "0.10.1"
aws-sdk-kms = "0.10.1"
aws-types = { version = "0.10.1", features = [ "hardcoded-credentials" ] }

[lib]
crate-type = ["cdylib"]
